<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/white"
        android:backgroundTint="#0038FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/menu"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabcontrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:visibility="invisible"
        android:focusable="true"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fabmain"
        app:layout_constraintEnd_toEndOf="@+id/fabmain"
        android:contentDescription="@string/contract"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabpartner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fabcontrato"
        app:layout_constraintEnd_toEndOf="@+id/fabcontrato"
        android:contentDescription="@string/partner"
        app:srcCompat="@drawable/person"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabrefer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/refers"
        android:focusable="true"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabpartner"
        app:layout_constraintEnd_toEndOf="@+id/fabpartner"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabbarrido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/barridos"
        android:focusable="true"
        android:tint="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabrefer"
        app:layout_constraintEnd_toEndOf="@+id/fabrefer"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fabbarrido"
        app:layout_constraintEnd_toEndOf="@+id/fabbarrido"
        android:contentDescription="@string/search"
        app:srcCompat="@android:drawable/ic_menu_search"/>

</androidx.constraintlayout.widget.ConstraintLayout>