<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="@dimen/fab_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sincro"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_options"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/urldb_img"
                android:layout_width="26dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/icon_url" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/urldb_img"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/txt_til_ambiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="  Ambiente"
                    android:layout_marginTop="2dp"
                    android:padding="4dp"/>

                <Spinner
                    android:id="@+id/c_spinner_ambiente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:padding="4dp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_options"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/db_img"
                android:layout_width="26dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/icon_url" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_database"
                android:padding="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/db_database"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    tools:text="dvtelevision" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_options"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userdb_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/person" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterUserName"
                android:padding="4dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/db_UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"
                    android:singleLine="true" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_options"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/db_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnuploadbarrido"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#60AA61"
            android:text="Enviar Barridos"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnupload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#60AA61"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btndownload"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:text="@string/receive"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnuser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:text="Información Usuario"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:text="Actualizar datos"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnuploaddata"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:text="Cargar Referidos"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnexportdb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="Exportar Base de Datos"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnrestore"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:backgroundTint="#B72929"
            android:text="Restaurar Base de Datos"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btndropdb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="5dp"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:backgroundTint="#B72929"
            android:text="Eliminar Base de Datos"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white" />

    </LinearLayout>
    </ScrollView>
</RelativeLayout>